--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,22 @@ button {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
 }
+
+/** PAGE DIV **/
+.page-div {
+    padding: 0 5% 0 5%;
+}
+
+/** NAV BAR **/
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: space-evenly;
+    width: 400px;
+}
