--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,8 @@ button {
 .card {
     display: flex;
     flex-direction: column;
-    border: solid 1px red;
+    box-shadow: hsl(208, 11%, 55%) 0px 5px 15px;
+    border-radius: 10px;
     width: 300px;
     height: 250px;
     padding: 5% 5% 5% 5%;
@@ -119,7 +120,6 @@ button {
     align-items: center;
     gap: 2%;
     height: 70px;
-    border: solid 1px blue;
 }
 .author p {
     flex-direction: column;
@@ -130,14 +130,15 @@ button {
     align-content: flex-end;
     height: 50px;
     width: 120px;
-    border: solid 1px black;
 }
 #name {
     margin-bottom: -5%;
     font-size: 12px;
+    font-weight: 400;
 }
 #role {
     font-size: 10px;
+    color: hsl(0, 0%, 75%);
 }
 .author img {
     border-radius: 100px;
