--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,12 @@ button {
     width: 400px;
     margin-bottom: 5%;
 }
+/** FOOTER **/
+.footer-section {
+    background-color: hsl(243, 87%, 12%);
+    color: white;
+    height: 500px;
+}
+.footer {
+    padding: 5% 5% 0 5%;
+}
