--- a/styles.css
+++ b/styles.css
@@ -183,23 +183,22 @@ button {
 .footer {
     display: flex;
     justify-content: space-between;
-    padding: 5% 5% 0 5%;
+    padding: 0 5% 0 5%;
     height: 450px;
 }
-
 .sm-icons {
     display: flex;
+    justify-content: center;
+    width: 200px;
     gap: 10px;
-    margin-top: 5%;
-    margin-left: 5%;
+    margin-top: 1%;
 }
 .fa-brands {
     border: solid 1px white;
     border-radius: 15px;
-    height: 24px;
-    width: 24px;
+    height: 26px;
+    width: 26px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1%;
 }
