--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,10 @@ button {
     display: flex;
     justify-content: space-between;
     padding: 0 5% 0 5%;
-    height: 450px;
+    height: 250px;
+}
+.footer-logo {
+    padding: 5% 0 0 5%;
 }
 .sm-icons {
     display: flex;
@@ -196,8 +199,8 @@ button {
 .fa-brands {
     border: solid 1px white;
     border-radius: 15px;
-    height: 26px;
-    width: 26px;
+    height: 24px;
+    width: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
