--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ button {
     height: 250px;
     padding: 5% 5% 5% 5%;
     margin-top: 5%;
+    background-color: white;
 }
 .card img {
     width: 20px;
