--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ button {
 }
 
 /** HERO **/
+.hero-section {
+    margin-bottom: 15%;
+}
 .hero {
     display: flex;
     padding: 0 5% 0 5%;
@@ -82,10 +85,10 @@ button {
 
 /** FEATURE BLOCK **/
 .feature-section {
-    border: solid 1px black;
+    border: solid 1px white;
     background-image: url(./images/bg-curve-desktop.svg);
     background-repeat: no-repeat;
-    background-size: 200% 100%;
+    background-size: 280% 100%;
     background-position: center;
 }
 .feature {
@@ -93,8 +96,8 @@ button {
     justify-content: space-between;
     align-items: center;
     padding: 0 5% 0 5%;
-    margin-top: 15%;
-    height: 620px;
+    margin-top: 10%;
+    height: 700px;
 }
 .feature-p {
     width: 520px;
@@ -155,7 +158,6 @@ button {
 /** SIGNUP **/
 .signup-section {
     background-color: hsl(238, 22%, 44%);
-    margin-top: 10%;
 }
 .signup {
     display: flex;
