--- a/styles.css
+++ b/styles.css
@@ -256,20 +256,21 @@ button {
     .feature {
         display: flex;
         flex-direction: column-reverse;
-        padding: 0 5% 0 5%;
+        
         align-items: center;
         justify-content: center;
+        margin-top: 5%;
     }
     .feature-section {
         border: solid 1px black;
         background-image: url(./images/bg-curve-mobile.svg);
         background-repeat: no-repeat;
+        background-size: 350% 100%;
         background-position: center;
         height: 1000px;
-        margin-top: 0;
     }
     .feature-image {
-        margin-top: 10%;
+        margin-top: 60%;
     }
     .feature-p {
         width: 350px;
