--- a/styles.css
+++ b/styles.css
@@ -227,21 +227,32 @@ button {
         margin: 0;
         padding: 0;
     }
+    .nav-bar img {
+        width: 120px;
+        height: 35px;
+    }
+    .nav-list {
+        width: 200px;
+    }
+    .nav-p {
+        font-size: 12px;
+    }
     .hero {
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
         width: 450px;
-        height: 700px;
+        height: 750px;
         border: solid 1px blue;
-        gap: 5%;
+        gap: 10%;
         margin: 0;
         padding: 0;
     }
     .hero-left {
         width: 340px;
         height: 200px;
+        text-align: center;
     }
     .hero-title,
     .feature-title {
