--- a/styles.css
+++ b/styles.css
@@ -211,17 +211,16 @@ button {
     display: flex;
     justify-content: center;
     width: 200px;
-    gap: 10px;
     margin-top: 1%;
 }
 .fa-brands {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     border: solid 1px white;
-    border-radius: 15px;
+    border-radius: 100px;
     height: 24px;
     width: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 /******************
     MOBILE
@@ -323,20 +322,23 @@ button {
     .footer {
         display: flex;
         flex-direction: column;
-        height: 450px;
+        height: 500px;
     }
     .footer-section {
         display: flex;
         flex-direction: column;
-        height: 600px;
+        height: 680px;
     }
     .contact {
-        height: 300px;
-        margin-bottom: 5%;
+        height: 150px;
+        margin-bottom: 2%;
     }
     .footer .sm-icons {
         justify-content: center;
         align-items: center;
-        width: 405px;
+        align-self: center;
+        width: 200px;
+        margin-top: 0;
+        height: 24px;
     }
 }
